# gitbutler

./: .gitignore  Cargo.toml  DEVELOPMENT.md  RULES.md  package.json  pnpm-lock.yaml  turbo.json
.gitbutler/: gates.toml  permissions.toml
.spec/: README.md
.spec/reviews/: red-hat-20260620T051414Z.md  red-hat-20260622-173510.md  red-hat-20260622-sprint01.md  red-hat-20260622-sprint02.md  red-hat-20260622-sprint03.md  red-hat-20260622-sprint04.md  red-hat-20260622-sprint05.md  red-hat-20260622T214308Z-cycle3-revalidation.md  red-hat-20260622T214308Z.md  red-hat-20260623-220723.md  red-hat-20260623T001623Z-master-vs-sprint08.md  red-hat-20260625T211154Z-postcomplete.md  red-hat-20260626-130246.md  red-hat-20260626T011513Z.md
.tmp/AUTHZ-001/: AC-1-seeded-artifact.txt  AC-2-green.txt  AC-3-red-against-start.txt  AC-3-seeded-artifact.txt  AC-4-seeded-artifact.txt  ac-1-output.txt  ac-3-output.txt  ac-4-output.txt  requirement-results.json  tc-2-output.txt  tc-3-output.txt  tc-5-output.txt  tc-7-output.txt  test-output.txt  verification-summary.json  verify-manifest.json
.tmp/AUTHZ-002/: AC-1-green.txt  AC-1-red-against-start.txt  AC-1-seeded-artifact.txt  AC-2-green.txt  AC-2-red-against-start.txt  AC-2-seeded-artifact.txt  AC-3-green.txt  (+28 more)
crates/: AGENTS.md  WORKSPACE_MODEL.md
crates/but-authz/: Cargo.toml  README.md
crates/but-authz/src/: assignment_state.rs  authority.rs  authorize.rs  commit_gate.rs  config.rs  denial.rs  lib.rs  menu.rs  migrate.rs  principal.rs  process.rs  registry.rs  route.rs
crates/but-authz/tests/: assignment_state.rs  authority.rs  authorize.rs  config.rs  governance_e2e_fixtures.rs  grps_ref_pin.rs  grps_union.rs  invariant_build_gates.rs  primer.rs  process.rs  registry.rs  steer_carriers.rs  steer_cause.rs  steer_class_mapping.rs  steer_menu.rs  steer_route_table.rs
crates/but-authz/tests/fixtures/scenario/: governance-base.sh
crates/but-db/: Cargo.toml
crates/but-db/src/: lib.rs
crates/but-db/src/table/: local_review_assignments.rs  local_review_comments.rs  local_review_meta.rs  local_review_verdicts.rs  mod.rs
crates/but-db/tests/db/: migration.rs
crates/but-db/tests/db/table/: local_review_assignments.rs  local_review_comments.rs  local_review_meta.rs  local_review_verdicts.rs  mod.rs
docs/: governance-setup.md
e2e/: package.json
(+1590 files in other folders)
