[package]
name = "but-authz"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
publish = false
rust-version.workspace = true
description = "Pure functional authorization catalog and authority-set primitives"

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
gix.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
anyhow.workspace = true
but-testsupport.workspace = true
serde_json.workspace = true

[lints]
workspace = true
